fix(android): auto-read Douyin shop media on Xiaomi